--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -13,12 +13,13 @@
 \usepackage{multirow}
 \usepackage[table]{xcolor}
 \usepackage{ragged2e}
+\usepackage{xspace}
 \usepackage{parskip}
-\usepackage{tabularx}
 \usepackage{tabulary}
 \usepackage[normalem]{ulem}
 \usepackage{hyperref}
-\hypersetup{pdfborder={0 0 0}, colorlinks=true, urlcolor=blue}
+\hypersetup{pdfborder={0 0 0}, colorlinks=true, urlcolor=blue, linkcolor=black}
+\usepackage{titlesec}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
 \usepackage{ifthen}
@@ -26,69 +27,73 @@
 \usepackage[round]{natbib}
 \bibliographystyle{evolution}
 
+%% Format headers and footers %%%%%%%%%%%%%%%%%%%%
 \pagestyle{fancy}
-\lhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize Jamie Oaks}}
-\chead{\ifthenelse{\value{page}=1}{{\scshape Research Statement} \\ Jamie Richard Oaks}{\sffamily\footnotesize Research Statement}}
-\rhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize \today}}
+%\lhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize Jamie Oaks}}
+\lhead{\sffamily \emph{\docTitle} \\ Jamie R. Oaks}
+%\chead{\ifthenelse{\value{page}=1}{{\scshape \docTitle} \\ Jamie Richard Oaks}{\sffamily\footnotesize \docTitle}}
+%\rhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize \today}}
+\rhead{\sffamily \today}
 \cfoot{\sffamily\footnotesize Page \thepage\ of \pageref{LastPage}}
-\renewcommand{\headrulewidth}{0pt}
+\renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0pt}
-%\renewcommand{\headheight}{14pt}
 
+%% Format section titles %%%%%%%%%%%%%%%%%%%%%%%%%
+\renewcommand\refname{Peer-reviewed Publications}
+
+\titleformat{\section}[hang]
+    {\large\sffamily\bfseries}
+    {\S\ \thesection.}{.5em}{}[]\titlespacing{\section}
+    {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
+
+\titleformat{\subsection}[hang]
+    {\large\sffamily\itshape}
+    {\S\ \thesection.}{.5em}{}[]\titlespacing{\subsection}
+    {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
+
+\titleformat{\subsubsection}[runin]
+    {\sffamily\bfseries}
+    {\S\ \thesection.}{.5em}{}[.---]\titlespacing{\subsubsection}
+    {\parindent}{1.0ex plus .1ex minus .1ex}{0pt}
+
+%% Format list environments %%%%%%%%%%%%%%%%%%%%%%%%
+\renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
+\renewcommand{\labelitemi}{$\circ$}
+
+\newenvironment{myEnumerate}{
+  \begin{enumerate}
+    \setlength{\itemsep}{0.25em}
+    \setlength{\parskip}{0pt}
+    \setlength{\parsep}{0.5em}}
+  {\end{enumerate}}
+
+\newenvironment{myItemize}{
+  \begin{itemize}
+    \setlength{\leftskip}{-4mm}
+    \setlength{\itemsep}{0.25em}
+    \setlength{\parskip}{0pt}
+    \setlength{\parsep}{0.5em}}
+  {\end{itemize}}
+
+%% Basic formatting and spacing %%%%%%%%%%%%%%%%%%%%%
+\setlength{\parindent}{0em}
+\setlength{\parskip}{0.5em}
+
+%% My functions %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\ignore}[1]{}
 \newcommand{\addTail}[1]{\textit{#1}.---}
 \newcommand{\super}[1]{\ensuremath{^{\textrm{#1}}}}
 \newcommand{\sub}[1]{\ensuremath{_{\textrm{#1}}}}
 \newcommand{\dC}{\ensuremath{^\circ{\textrm{C}}}}
-\makeatletter
-  \renewcommand{\section}{\@startsection{section}{1}{0mm}%
-    {-8pt}%
-    {2pt}%
-   {\bfseries\large}}
-\makeatother
+\newcommand{\tableSubItem}{\addtolength{\leftskip}{1em} \labelitemi \xspace}
 
-\makeatletter
-  \renewcommand{\subsection}{\@startsection{subsection}{1}{0mm}%
-  {-12pt}%
-  {2pt}%
-  {\bfseries\itshape}}
-\makeatother
-
-\makeatletter
-  \renewcommand{\subsubsection}{\@startsection{subsubsection}{1}{0mm}%
-  {-12pt}%
-  {0pt}%
-  {\raggedleft\addTail}}
-\makeatother
-
-\renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
-
-\renewcommand{\labelitemi}{$\circ$}
-
-\newenvironment{myEnumerate}{
-  \begin{enumerate}
-    \setlength{\itemsep}{1pt}
-    \setlength{\parskip}{0pt}
-    \setlength{\parsep}{0pt}}
-  {\end{enumerate}}
-
-\newenvironment{myItemize}{
-  \begin{itemize}
-    \setlength{\leftskip}{-5mm}
-    \setlength{\itemsep}{1pt}
-    \setlength{\parskip}{0pt}
-    \setlength{\parsep}{0pt}}
-  {\end{itemize}}
-
-\newcolumntype{Y}{>{\raggedright\arraybackslash}X}
-
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\docTitle}{Research Statement\xspace}
 \begin{document}
 \raggedright
-\setlength{\parindent}{0in}
 \singlespacing
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Previous \& Current Research}
 %%%%%%%%%%%
 
