a couple of ideas

--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -43,17 +43,20 @@
 
 \titleformat{\section}[hang]
     {\large\sffamily\bfseries}
-    {\S\ \thesection.}{.5em}{}[]\titlespacing{\section}
+    {\S\ \thesection.}{.5em}{}[]
+\titlespacing{\section}
     {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
 
 \titleformat{\subsection}[hang]
     {\large\sffamily\itshape}
-    {\S\ \thesection.}{.5em}{}[]\titlespacing{\subsection}
+    {\S\ \thesection.}{.5em}{}[]
+\titlespacing{\subsection}
     {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
 
 \titleformat{\subsubsection}[runin]
     {\sffamily\bfseries}
-    {\S\ \thesection.}{.5em}{}[.---]\titlespacing{\subsubsection}
+    {\S\ \thesection.}{.5em}{}[.---]
+\titlespacing{\subsubsection}
     {\parindent}{1.0ex plus .1ex minus .1ex}{0pt}
 
 %% Format list environments %%%%%%%%%%%%%%%%%%%%%%%%
@@ -93,6 +96,9 @@
 \begin{document}
 \raggedright
 \singlespacing
+
+My research focuses on understanding the processes that generate and maintain biodiversity.
+development, implementation, and application of model-based phylogenetic and phylogeographic models.
 
 \section*{Previous \& Current Research}
 %%%%%%%%%%%
